[package]
name = "radius-server"
version = "0.2.2"
edition = "2024"
description = "A minimal async multi-threaded RADIUS server framework with dictionary support."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SetliteWeb/radius-server"
homepage = "https://github.com/SetliteWeb/radius-server"
documentation = "https://github.com/SetliteWeb/radius-server/blob/main/examples/server.rs"
readme = "README.md"
keywords = ["radius", "authentication", "network", "server"]
categories = ["network-programming", "authentication"]

[dependencies]
md5 = "0.8.0"
tokio = {version="1.46.1",features=["full"]}
